# git-api

./: Cargo.toml
src/: application.rs  error.rs  main.rs  structs.rs
src/repository/: mod.rs  object.rs  repo.rs
src/routes/: auth.rs  config.rs  mod.rs  object.rs  repo.rs
src/utils/: commands.rs  commits.rs  dates.rs  mod.rs  responses.rs  validation.rs
