[package]
name = "Git-Api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
env_logger = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

# AUTH DEPS
jwt = "0.16.0"
actix-web-httpauth = "0.8.0"
argonautica = "0.2.0"
hmac = "0.12.1"
sha2 = "0.10.6"
